[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = "Telegram bot"
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.11.2"
httpx = "^0.16.1"
python-whois = "^0.7.3"
core = {path = "../core"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
