[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = "Telegram bot"
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.11.2"
httpx = "^0.16.1"
python-whois = "^0.7.3"
core = {path = "../core"}
aioinflux = "^0.9.0"
loguru = "^0.5.3"
whois-vu = "^0.3.0"
tortoise-orm = "^0.16.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
