[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = "Telegram bot"
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
core = {path = "../core"}
aiogram = "^2.11.2"
httpx = "^0.16.1"
python-whois = "^0.7.3"
aioinflux = "^0.9.0"
loguru = "^0.5.3"
whois-vu = "^0.3.0"
tortoise-orm = "^0.16.20"
aiomysql = "^0.0.21"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
